--- a/reports/references.bib
+++ b/reports/references.bib
@@ -1,13 +1,3 @@
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical
-    Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2016},
-  url = {https://www.R-project.org/},
-}
-
 @misc{Palmer, 
   title = {Palmer Station Webcams},
   author = {Nationa Science Foundation}, 
@@ -29,7 +19,7 @@
 
 @article{RStudio, 
   title = {Release the penguins}, 
-  author = {{Hill, Horst and Gorman}, Alison Hill, Allison Horst, and Krissten Gorman},
+  author = {{Hill et. al.}, Alison Hill, Allison Horst, Kirsten Gorman},
   year = {2020}, 
   url = {https://education.rstudio.com/blog/2020/07/palmerpenguins-cran/},
 }
